# qec-dashboard

./: .gitignore  CITATION.cff  README.md  app.py  pyproject.toml
data/sample_runs/: benchmark.json  syndrome.json  threshold.json
src/qecdash/: __init__.py  data_loader.py  sample_data.py
tests/: test_data_loader.py
